# job_search_assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  LOCAL_DEVELOPMENT.md  README.md  pyproject.toml  run_app.py
.github/workflows/: ci.yml
configs/: base.toml  dev.toml  prod.toml  stage.toml  test.toml
docs/: Gemfile  LOCAL_DEVELOPMENT.md  README.md  _config.yml  architecture.md  debugging.md  installation.md  interview_preparation_guide.md  tracing-quick-reference.md
docs/design/: README.md  agent-infrastructure.md  configuration.md  interview-prep-progress-flow.md  job-evaluation-design.md  llm-factory-pattern.md  observability-tracing.md
docs/examples/: env.example  tracing-example.py
examples/: job_preferences.yaml  resume_template.yaml
scripts/: cleanup.sh  format.sh  serve-docs.sh
src/: __init__.py
src/agent/: __init__.py
src/agent/agents/: __init__.py
src/agent/base/: agent.py  tool.py
src/agent/common/: __init__.py  base.py
src/agent/prompts/: __init__.py
src/agent/tools/: __init__.py  pii_redaction.py
src/agent/workflows/: __init__.py
src/agents/: interview_preparation.py  job_evaluation.py
src/config/: __init__.py  langfuse.py  loader.py  manager.py  models.py  schemas.py  settings.py
src/config/llm/: __init__.py  anthropic.py  base.py  fireworks.py  gemini.py  openai.py
src/core/: __init__.py
src/core/job_evaluation/: __init__.py  criteria.py  evaluator.py  recommender.py
src/core/resume/: __init__.py
src/data/: __init__.py  models.py
src/exceptions/: __init__.py  base.py  config.py  llm.py
src/llm/: __init__.py  anthropic.py  base.py  factory.py  langfuse.py  langfuse_handler.py
src/llm/clients/: __init__.py  anthropic.py  base.py  gemini.py  google.py
src/llm/common/: __init__.py  base.py  factory.py
src/llm/observability/: __init__.py  base.py  langfuse.py  metrics.py
src/llm/prompts/: interview_preparation.py
src/models/: __init__.py  agent_plans.py  base.py  enums.py  evaluation.py  interview.py  job.py  models.py  resume.py  user.py
src/utils/: logging.py  pdf_processor.py  singleton.py
tests/: conftest.py
tests/fixtures/sample_job_descriptions/: software_engineer.txt
tests/fixtures/sample_resumes/: software_engineer.yaml
tests/integration/: test_basic_import.py
tests/integration/agent/: __init__.py  test_workflow_integration.py
tests/unit/: test_api_key_validation.py  test_config.py  test_config_system.py  test_environment_check.py  test_job_evaluation_agent.py  test_job_evaluation_core.py  test_langfuse_config.py  test_langfuse_handler.py  test_llm_clients_anthropic.py  test_models.py  test_settings.py  test_utils_singleton.py
tests/unit/agent/: README.md  test_extraction_agent.py  test_schema_extraction_tools.py  test_workflow_states.py
tests/unit/agents/: test_job_evaluation.py
tests/unit/config/: test_system.py
tests/unit/exceptions/: test_exceptions.py
tests/unit/llm/: test_factory.py  (+3 more)
ui/: __init__.py  app.py  interview_preparation.py
ui/components/: environment_check.py  job_results.py
ui/pages/: __init__.py  home.py  interview_prep.py  job_evaluation.py  resume_customization.py  settings.py
ui/utils/: __init__.py  navigation.py
(+49 files in other folders)
