[project]
name = "job-search-assistant"
version = "0.1.0"
description = "AI-powered job search assistant using LangGraph agents for resume optimization and job matching"
readme = "README.md"
authors = [
    { name = "georgeliu1998", email = "12277063+georgeliu1998@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "httpx>=0.28.1",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "langchain-tavily>=0.2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "black>=26.5.1",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
]
presidio = [
    # spaCy English language model for Presidio NLP-based PII detection
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure hatchling to include all packages from src directory
[tool.hatch.build.targets.wheel]
packages = ["find:"]

# Allow direct URL references for spaCy models
[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
